# lola

./: README.md  pyproject.toml
docs/: modules.md  roadmap.md
modules/: lolamod.yml
modules/chef-baking-buddy/: AGENTS.md
modules/chef-baking-buddy/context/: blog.context  chocolate-cake.context  persona.context
modules/chef-baking-buddy/templates/: blog-template.md
modules/chef-buddy/: AGENTS.md  README.md
modules/chef-buddy/context/: blog.context  chocolate-cake.context  persona.context
modules/chef-buddy/scripts/: new-blog.sh  post-blog.sh
src/lola/: __init__.py  layout.py  main.py  mod.py
